# termicolour

./: Cargo.toml
src/: Colour8.rs  colours.rs  lib.rs  main.rs
src/colours/: BrightColour.rs
