[package]
name = "termicolour"
version = "0.1.0"
authors = ["CatRass"]
description = "A lightweight, std only (amateur) library for printing coloured text in the terminal"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
